2010-12-24  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh (cpvirtualenv): Ensure that both pre hooks
	are run, even if one produces an error.

	* virtualenvwrapper/user_scripts.py: Change log message format.

	* tox.ini: Configuration file for running tests under tox.

	* tests/test_run_hook.sh (test_virtualenvwrapper_run_hook_permissions):
	Fix the expected output message.

	* tests/*: Make sure all of the test scripts have execute permission.

	* tests/test.sh (test_virtualenvwrapper_verify_workon_home_missing_dir_quiet_init):
	Use source instead of starting another shell, since zsh doesn't
	play nicely with inheriting environment settings otherwise.
	(test_python_interpreter_set_incorrectly): Force
	VIRTUALENVWRAPPER_PYTHON before running the script in a sub-shell.

	* tests/run_tests: Script to run through all of the other test
	scripts one at a time.

2010-09-18  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh: Apply patch from Zach Voase to fix
	lsvirtualenv under zsh.

2010-09-14  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh (workon): Use the brief list format by
	default.

2010-08-16  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper/user_scripts.py (get_env_details): New hook to
	optionally give more detail than the name of an environment when
	the user requests a list.

	* virtualenvwrapper.sh: Update workon to use the get_env_details
	hook to print more details, if the user provides scripts to give
	them.

2010-06-03  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh: Escape the call to "which" so we don't use
	an alias by accident.

2010-05-22  Doug Hellmann  <dhellmann@racemi.com>

	* tests/test_cp.sh: Clarify some of the tests by breaking up,
	renaming, and rewriting some functions.

	* Makefile (PYTHON26): If we're in a virtualenv when the tests
	start, use a hard-coded path to the binary to get the global
	version.

2010-05-18  Doug Hellmann  <dhellmann@racemi.com>
