@@ -1,3 +1,9 @@
+2010-12-26  Doug Hellmann  <dhellmann@racemi.com>
+
+	* virtualenvwrapper.sh (virtualenvwrapper_get_python_version): Use
+	python's -V option and cut to get the version instead of a python
+	one-liner.
+
 2010-12-24  Doug Hellmann  <dhellmann@racemi.com>
 
 	* virtualenvwrapper.sh (cpvirtualenv): Ensure that both pre hooks
